[gd_scene load_steps=10 format=3 uid="uid://d1mxf2y1q0tnw"]

[ext_resource type="Script" path="res://scripts/ai_nav.gd" id="1_dqkch"]
[ext_resource type="Texture2D" uid="uid://bnqgtufhv4prp" path="res://assets/RedGuyTest.png" id="2_oc4op"]
[ext_resource type="Texture2D" uid="uid://0rlehceyxhbn" path="res://assets/Muzzle-Flash.png" id="3_32kef"]
[ext_resource type="AudioStream" uid="uid://32ob6pvpoqkf" path="res://music/GunSound.mp3" id="3_qlg0r"]
[ext_resource type="Script" path="res://scripts/navigation_agent_2d.gd" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://dy8jyxru8hnqk" path="res://assets/light_texture.tres" id="6_7mv6w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5gj1"]
size = Vector2(118, 125)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_h00kt"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_nb44b"]
polygon = PackedVector2Array(-26, -8, -4, -20, 26, -32, 60, -44, -30, -42, -42, 0, -22, 8, 8, 18, 28, 26, 56, 30, -42, 0, -32, -42)

[node name="player" type="CharacterBody2D" groups=["enemies"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_dqkch")
metadata/_edit_vertical_guides_ = [40.0, 40.0]
metadata/_edit_horizontal_guides_ = [-3.0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_u5gj1")

[node name="Body" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.2657, 0.2657)
texture = ExtResource("2_oc4op")

[node name="Gun" type="Sprite2D" parent="Body"]
position = Vector2(-1.13243e-05, 263.455)
rotation = 0.00872665
texture = SubResource("CompressedTexture2D_h00kt")

[node name="MuzzleFlash" type="Sprite2D" parent="Body/Gun"]
visible = false
position = Vector2(30, 120)
rotation = 1.5708
scale = Vector2(0.414564, 0.414564)
texture = ExtResource("3_32kef")

[node name="Camera2D" type="Camera2D" parent="." groups=["enemies"]]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.183493, 0.185167)

[node name="GunCooldown" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_right = 4.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
position = Vector2(89, -8)
scale = Vector2(0.139648, 0.139648)

[node name="GunSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qlg0r")
pitch_scale = 0.74
attenuation = 1.86607

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-20, 6)
energy = 5.63
range_layer_min = -100
range_layer_max = 100
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
texture = ExtResource("6_7mv6w")
texture_scale = 10.0
height = 19.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="PointLight2D"]
occluder = SubResource("OccluderPolygon2D_nb44b")

[node name="ShootTimer" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
script = ExtResource("4_dqkch")

[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
